# captcha

./: .dockerignore  Cargo.toml  Dockerfile  README.md  kubernetes.yaml
discord/: Cargo.toml
discord/src/: main.rs
